Базовая стилизация страницы отелей

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,8 @@ a {
   font-weight: 400;
 }
 
-.footer-copyright img {
-  color: red;
+/*Стилизация страницы поиска отелей*/
+
+.site-navigation-current {
+  color: #766357;
 }
