--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,22 @@ a {
   text-decoration: none;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .btn {
   display: inline-block;
   
@@ -49,6 +65,7 @@ a {
 
 .main-header-logo {
   position: absolute;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -57,15 +74,18 @@ a {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  padding: 0 72px 0 72px;
+  padding: 0 6%;
   
   list-style: none;
 }
 
 .site-navigation li {
-  width: 240px;
-  padding-bottom: 16px;
-  padding-top: 16px;
+  width: 20%;
+  padding: 16px 0;
+}
+
+.site-navigation li:nth-child(2) {
+  margin-right: 20%;
 }
 
 .site-navigation li:nth-child(1), 
@@ -92,23 +112,21 @@ a {
 }
 
 .intro {
-  margin-bottom: 62px;
-  
   background-image: url("../img/background.jpg");
   background-position: top;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .intro img {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
+  margin: 0 auto;
   margin-top: 76px;
-  margin-bottom: 80px;
 }
 
 .promo {
   margin-bottom: 51px;
+  padding-top: 62px;
   
   text-align: center;
 }
@@ -125,6 +143,9 @@ a {
 }
 
 .promo p {
+  width: 575px;
+  margin: 0 auto;
+  
   font-size: 14px;
   line-height: 26px;
   color: #333333;
@@ -138,10 +159,13 @@ a {
   
   list-style: none;
   text-align: center;
+  background-color: #81b3d2;
 }  
 
 .features-item {
+  box-sizing: border-box;
   width: 400px;
+  padding: 0 49px;
   
   color: #ffffff;
   
@@ -157,15 +181,22 @@ a {
   font-weight: 700;
 }
 
-.features-number {
+.features-item .features-number {
   margin-bottom: 28px;
+}
+
+.features-image {
+  display: flex;
+  align-items: center;
+  height: 255px;
+  overflow: hidden;
 }
 
 .features-item-light {
   background-color: #ffffff;
 }
 
-.features-item-light h2 {
+.features-item-light .features-title {
   color: #000000;
 }
 
@@ -174,10 +205,12 @@ a {
 }
 
 .features-item-gray {
+  padding: 0 69px;
+  
   background-color: #eeeeee;
 }
 
-.features-item-gray h3 {
+.features-item-gray .features-title {
   color: #000000;
 }
 
@@ -185,20 +218,23 @@ a {
   color: #333333;
 }
 
-.offer-title {
+.offer {
   padding-top: 55px;
   
   text-align: center;
 }
 
-.offer-title b {
+.offer-title {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   color: #000000;
 }
 
-.offer-title p {
+.offer p {
+  width: 575px;
+  margin: 33px auto 49px auto;
+  
   font-size: 14px;
   line-height: 24px;
 }
@@ -223,7 +259,18 @@ a {
   background-color: #503e33;
 }
 
+.index-footer {
+  position: relative;
+}
+
 .search-form {
+  box-sizing: border-box;
+  top: 0;
+  left: 50%;
+  width: 568px;
+  margin-left: 316px;
+  padding: 55px;
+  
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
@@ -310,6 +357,11 @@ a {
 }
 
 .social-list {
+  display: flex;
+/*
+  дисплей флекс
+но тут подумай тебе надо добиться такого поведения чтобы при переполнении между ними всегда было расстояние и когда элементов много они переносились на другую строку
+*/
   list-style: none;
   padding: 0;
 }
@@ -337,11 +389,12 @@ a {
 .filters {
   background-image: url("../img/background-hotels.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 6% 33px 6%;
 }
 
 .filter-form {
-  display: flex;
-  padding: 0 72px 0 72px;  
+  display: flex;  
 }
 
 .filter-form-group {
@@ -389,20 +442,9 @@ a {
   background-color: #ffffff;
 }
 
-/*
-.sorting,
-.result {
-  padding: 0 72px 0 72px;
-}
-*/
-
 .sorting {
   display: flex;
-  padding: 0 72px 0 72px;
-}
-
-.sorting-caption {
-  width: 164px;
+  padding: 0 6%;
 }
 
 .sorting-caption {
@@ -425,9 +467,9 @@ a {
 }
 
 .sorting-list {
+  display: flex;
   margin: 0;
   padding: 0;
-  width: 288px;
   list-style: none;
 }
 
@@ -463,7 +505,7 @@ a {
 
 .result-item {
   display: flex;
-  padding: 0 72px 0 72px;
+  padding: 30px 6%;
   
   list-style: none;
   border-bottom: 1px solid #e5e5e5;
@@ -474,7 +516,9 @@ a {
 }
 
 .result-item-info {
-  width: 363px;
+  width: 20%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .result-item-title a{
@@ -484,7 +528,8 @@ a {
   color: #000000;
 }
 
-.result-item-title a:hover {
+.result-item-title a:hover,
+.result-item-title a:focus {
   color: #81b3d2;
 }
 
@@ -493,10 +538,14 @@ a {
 }
 
 .result-item-text {
+  width: 50%;
+  padding-right: 10px;
+  box-sizing: border-box;
   color: #333333;
 }
 
 .btn-more {
+  margin-right: 6px;
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
@@ -542,8 +591,4 @@ a {
   color: #666666;
   
   background-color: #f2f2f2;
-}
-
-.main-footer {
-  text-align: center;
 }
