--- a/css/style.css
+++ b/css/style.css
@@ -1062,10 +1062,9 @@ input[type="checkbox"] {
 }
 
 .result-item-info {
-  min-height: 90px;
-  width: 20%;
   display: flex;
   flex-wrap: wrap;
+  width: 25%;
 }
 
 .result-item-title a{
@@ -1141,7 +1140,25 @@ input[type="checkbox"] {
 }
 
 .result-item-rating {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90px;
   margin-left: auto;
+}
+
+.result-item-stars {
+  width: 23px;
+  height: 17px;
+  margin-left: auto;
+  margin-right: 5px;
+  
+  background-image: url(../img/star.svg);
+  background-repeat: repeat;
+}
+
+.two-stars {
+  
 }
 
 .result-item-rate {
