--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@ body {
   margin: 0;
   padding: 0;
   
-  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   
   background-color: #f2f2f2;
@@ -16,7 +16,8 @@ body {
   margin: 0 auto;
   
   background-color: #ffffff;
-  box-shadow: 0 0 15px 4px #dbdbdb;
+  -webkit-box-shadow: 0 0 15px 4px #dbdbdb;
+          box-shadow: 0 0 15px 4px #dbdbdb;
 }
 
 a {
@@ -35,18 +36,19 @@ input[type="checkbox"] {
 
   white-space: nowrap;
 
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
 .btn {
   display: inline-block;
+  vertical-align: middle;
   
   font: inherit;
   text-align: center;
   color: #ffffff;
-  vertical-align: middle;
   text-transform: uppercase;
   
   background-color: #766357;
@@ -69,12 +71,19 @@ input[type="checkbox"] {
   z-index: 1;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
   padding: 0 6%;
   
@@ -124,8 +133,8 @@ input[type="checkbox"] {
 .intro {
   position: relative;
   
-  background-image: url("../img/background.jpg");
   background-color: #d9eaf2;
+  background-image: url("../img/background.jpg");
   background-position: 50% 21%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -180,18 +189,23 @@ input[type="checkbox"] {
 }
 
 .features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
   
-  list-style: none;
   text-align: center;
+  
+  list-style: none;
   background-color: #81b3d2;
 }  
 
 .features-item {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 400px;
   padding: 0 49px 40px;
   
@@ -216,13 +230,17 @@ input[type="checkbox"] {
 
 .features-number {
   margin: 0;
-  padding: 0;
   margin-bottom: 23px;
+  padding: 0;
 }
 
 .features-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 256px;
   overflow: hidden;
 }
@@ -236,11 +254,13 @@ input[type="checkbox"] {
 .features-item-light {
   min-height: 330px;
   padding-bottom: 49px;
+  
   background-color: #ffffff;
 }
 
 .features-item-light .features-title {
   position: relative;
+  
   margin-top: 161px;
   
   color: #000000;
@@ -333,7 +353,8 @@ input[type="checkbox"] {
 }
 
 .btn-search {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 568px;
   padding: 30px 50px;
   
@@ -366,11 +387,15 @@ input[type="checkbox"] {
 
 .search-form {
   position: absolute;
-  display: flex;
-  flex-wrap: wrap;
-  
-  box-sizing: border-box;
   top: 0;
+  
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 568px;
   margin-left: 316px;
   padding: 55px;
@@ -389,7 +414,8 @@ input[type="checkbox"] {
 }
 
 .search-form input {  
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;  
+          box-sizing: border-box;
   
   font: inherit;
   text-transform: uppercase;
@@ -409,10 +435,15 @@ input[type="checkbox"] {
 
 .search-form .date-block {
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
   
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   margin-bottom: 29px;
 }
@@ -456,23 +487,30 @@ input[type="checkbox"] {
 
 .search-form .persons-block {
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 50%;
   
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50%;
   margin: 0;
   padding-bottom: 29px;
 }
 
 .persons-block:nth-child(2n-1) label {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 113px;
   padding-right: 12px;
 }
 
 .persons-block:nth-child(2n) label {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 113px;
   padding-left: 50px;
   padding-right: 12px;
@@ -491,13 +529,14 @@ input[type="checkbox"] {
 }
 
 .form-persons-change {
-  padding: 0;
   width: 38px;
   height: 38px;
+  padding: 0;
 }
 
 .icon-minus::before {
   content: "";
+  
   position: absolute;
   top: 17px;
   left: 126px;
@@ -511,6 +550,7 @@ input[type="checkbox"] {
 .icon-plus::before,
 .icon-plus::after {
   content: "";
+  
   position: absolute;
   top: 17px;
   left: 202px;
@@ -522,7 +562,9 @@ input[type="checkbox"] {
 }
 
 .icon-plus::after {
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .icon-minus:hover::before,
@@ -586,8 +628,12 @@ input[type="checkbox"] {
 
 .index-footer-wrapper,
 .main-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   
   text-align: center;
   
@@ -601,9 +647,9 @@ input[type="checkbox"] {
 }
 
 .hashtag {
+  width: 400px;
   margin: 0;
   padding: 0;
-  width: 400px;
   
   font-size: 21px;
   line-height: 26px;
@@ -617,24 +663,28 @@ input[type="checkbox"] {
 }
 
 .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   
   margin: 0;
   padding: 0;
 
   list-style: none;
-  
 }
 
 .social-button {
-  display: block;
   position: relative;
   
-  margin: 0 3px;
+  display: block;  
   width: 46px;
   height: 48px;
+  margin: 0 3px;
   
   color: #81b3d2;
   
@@ -652,12 +702,12 @@ input[type="checkbox"] {
 
 .icon-twitter::before {
   content: "";
-  display: block;
   
   position: absolute;
   top: 17px;
   left: 15px;
   
+  display: block;
   width: 17px;
   height: 15px;
   
@@ -667,11 +717,12 @@ input[type="checkbox"] {
 
 .icon-facebook::before {
   content: "";
-  display: block;
   
   position: absolute;
   top: 13px;
   left: 17px;
+  
+  display: block;
   
   width: 12px;
   height: 22px;
@@ -682,12 +733,12 @@ input[type="checkbox"] {
 
 .icon-youtube::before {
   content: "";
-  display: block;
   
   position: absolute;
   top: 16px;
   left: 13px;
   
+  display: block;
   width: 20px;
   height: 16px;
   
@@ -696,9 +747,15 @@ input[type="checkbox"] {
 }
 
 .footer-copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 400px;
 }
 
@@ -732,6 +789,7 @@ input[type="checkbox"] {
 .filters {
   padding: 0 6%;
   
+  background-color: #47535a;
   background-image: url("../img/background-hotels.jpg");
   background-repeat: no-repeat;
   background-position: 50% 15%;
@@ -739,14 +797,16 @@ input[type="checkbox"] {
 }
 
 .filter-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;  
 }
 
 .filter-form-group {
+  width: 255px;
   margin: 0;
   margin-top: 27px;
   padding: 0;
-  width: 255px;
 }
 
 .filter-form fieldset {
@@ -786,7 +846,10 @@ input[type="checkbox"] {
   display: block;
   
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .filter-form-option input[type="checkbox"]:focus + .filter-form-label::before {
@@ -796,6 +859,7 @@ input[type="checkbox"] {
 
 .filter-input-checkbox:checked + label::before {
   content: "";
+  
   position: absolute;
   left: -40px;
   top: -2px;
@@ -808,6 +872,7 @@ input[type="checkbox"] {
 
 .filter-input-checkbox + label::before {
   content: "";
+  
   position: absolute;
   left: -40px;
   top: -2px;
@@ -879,6 +944,7 @@ input[type="checkbox"] {
 
 .cost-range::after {
   content: "";
+  
   position: absolute;
   top: 50%;
   left: 50%;
@@ -887,7 +953,9 @@ input[type="checkbox"] {
   height: 22px;
 
   background: #ffffff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .cost-range label {
@@ -949,7 +1017,8 @@ input[type="checkbox"] {
   background: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -967,8 +1036,12 @@ input[type="checkbox"] {
 /*----------------Двойной ползунок*/
 
 .sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 6%;
   
   border-bottom: 1px solid #e5e5e5;
@@ -984,8 +1057,12 @@ input[type="checkbox"] {
 }
 
 .sorting-by {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: baseline;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .sorting-by-caption {
@@ -996,10 +1073,15 @@ input[type="checkbox"] {
 }
 
 .sorting-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
+  
   list-style: none;
 }
 
@@ -1060,6 +1142,8 @@ input[type="checkbox"] {
 }
 
 .result-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 30px 6%;
   
@@ -1076,9 +1160,14 @@ input[type="checkbox"] {
 }
 
 .result-item-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   width: 25%;
 }
 
@@ -1107,12 +1196,15 @@ input[type="checkbox"] {
   margin: 0;
   margin-bottom: 14px;
   padding-right: 10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  
   color: #333333;
 }
 
 .result-btn {
   padding: 3px 17px;  
+  
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
@@ -1150,16 +1242,25 @@ input[type="checkbox"] {
 }
 
 .result-item-rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-left: auto;
 }
 
 .result-item-stars {
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   width: 106px;
   height: 17px;
+  
   background-image: url("../img/star.svg");
   background-repeat: repeat-x;
   background-repeat: space;
